# sapphire-lang

./: .gitignore  CHANGELOG.md  CMakeLists.txt  INSTALL.md  Makefile  README.md  TESTING.md  install.sh  run_advanced_tests.sh  sapphire-fmt  test_examples.sh
docs/: API_REFERENCE.md  CNAME  DEPLOYMENT.md  ERROR_HANDLING_GUIDE.md  FEATURE_MATRIX.md  MILESTONE1_COMPLETE.md  MILESTONE5_PHASE1_COMPLETE.md  PATTERN_MATCHING.md  README.md  TOOLING.md  TRAITS.md  _config.yml  index.html  playground.css  playground.html  playground.js  script-final.js  script-new.js  script-v3.js  script-v4.js  script.js  style.css  theme.js
editors/emacs/: sapphire-mode.el
editors/vscode/: README.md  language-configuration.json  package-lock.json  package.json
examples/: OPTION_EXAMPLES.md  async_comprehensive.spp  async_simple.spp  builtin_decorators_test.spp  channel_comprehensive.spp  channel_iteration.spp  channel_methods.spp  channel_simple.spp  channel_test.spp  class_decorators_test.spp  concurrency_complete.spp  concurrency_showcase.spp  dataclass_test.spp  debug_test.spp  decorators_complete.spp  decorators_comprehensive.spp  decorators_test.spp  extend_methods.spp  fs_example.spp  goroutines_test.spp  hot_reload_comprehensive.spp  hot_reload_demo.spp  hot_reload_test.spp  http_example.spp  impl_test.spp  macro_minimal.spp  macros_basic.spp  macros_simple.spp  macros_test.spp  match_guard_indent.spp  match_guard_oneline.spp  match_guard_simple.spp  match_inline_test.spp  match_multi_arm.spp  match_multiple_patterns.spp  match_no_main.spp  match_test_minimal.spp  milestone4_websocket_test.spp  milestone5_complete.spp  option_comprehensive.spp  (+56 more)
examples/exception_handling/: README.md  error_handling_complete.spp  error_test_division.spp  error_test_finally.spp  error_test_minimal.spp  error_test_simple.spp  (+3 more)
registry/: README.md  server.py  spm-registry.py
src/: main.cpp
stdlib/fs/: fs.h  (+1 more)
tests/: test_pattern_matching.cpp  test_traits.cpp
(+80 files in other folders)
